<resources>
    <string name="app_name">Perro Estilo Movil</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Admininstrador</string>
    <string name="nav_header_subtitle">Hi Rousse !!</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="descripcion">Imagen</string>
    <string name="action_settings">Settings</string>
    <string name="menu_inicio">Inicio</string>
    <string name="menu_categorias">Categorias</string>
    <string name="menu_etiquetas">Etiquetas</string>
    <string name="menu_modelos">Modelos</string>
    <string name="menu_tallas">Tallas</string>
    <string name="menu_productos">Productos</string>
    <string name="menu_kit">MATCHS</string>
    <string name="menu_pedidos">Pedidos</string>
    <string name="menu_envios">Envios</string>
    <string name="menu_inventario">Inventario</string>
    <string name="menu_ventas">Ventas</string>
    <string name="menu_clientes">Clientes</string>
    <string name="menu_cuenta">Cuenta</string>
    <string name="pe">PERRO ESTILO</string>
    <string name="pe1">Perro estilo</string>
    <string name="slogan">ACCESORIOS PARA TI Y TU MASCOTA</string>
    <string name="correo">Correo electrónico: </string>
    <string name="password">Contraseña: </string>
    <string name="iniciar">Iniciar sesión</string>
    <string name="re_pass">¿Olvidaste tu contraseña? </string>
    <string name="facebook">Ingresar con facebook</string>
    <string name="google">Ingresar con google </string>
    <string name="contexto">contextoimagenes</string>
    <string name="registrar">Crear cuenta </string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="email">E-mail </string>
    <string name="telefono">Celular </string>
    <string name="r_pass">Contraseña</string>
    <string name="conf_pass">Confirmar contraseña </string>
    <string name="terminos">Aceptarpoliticas de privacidad.
                            Terminos y condiciones de uso.</string>
    <string name="registrarme">Registrarme </string>
    <string name="r_google">Registrarme con google</string>
    <string name="r_facebook">Registrarme con facebook</string>
    <string name="recuperar">Recuperar contraseña</string>
    <string name="forma">Como desea recuperar su contraseña</string>
    <string name="enviar_codigo">Enviaremos un código a tu correo electrónico o número registrado</string>
    <string name="f_correo">Mandamos un codigo a tu correo eléctrónico</string>
    <string name="f_telefono">Mandamos un codigo a tu teléfono celular</string>
    <string name="codigo">Ingrese el codigo</string>
    <string name="restablecer">Restablecer contraseña</string>
    <string name="new_pass">Nueva contraseña</string>
    <string name="enviar">Enviar</string>
    <string name="aceptar">Aceptar</string>
    <string name="enviarx2">Volver a enviar</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="admnAgreagProd">Agregar producto</string>
    <string name="admnBuscaProd">Buscar producto</string>
    <string name="admnEliminaProd">Eliminar producto</string>
    <string name="admnConsProd">Consultar producto</string>
    <string name="admnAgreagProdGaleria">Galería</string>
    <string name="admnAgreagNomProd">Nombre del producto</string>
    <string name="admnAgreagDescGen">Descripción general</string>
    <string name="admnAgreagCategor">Categoría</string>
    <string name="admnAgreagEtiqu">Etiquetas asociadas</string>
    <string name="agregar">Agregar</string>
    <string name="limpiar">Limpiar</string>
    <string name="Eliminar">Eliminar</string>
    <string name="Modificar">Modificar</string>
    <string name="admnModProd">Modifica producto</string>
    <string name="admnModProdID">Ingresa el id del producto</string>
    <string name="admnConsProdID">Ingresa el id del producto para filtrar</string>
    <string name="admnCodProd">Crear código de producto</string>
    <string name="idprod">Id del producto</string>
    <string name="idmod">Id del modelo</string>
    <string name="tallas">Seleccione las tallas disponibles</string>
    <string name="talla1">Talla 1</string>
    <string name="talla2">Talla 2</string>
    <string name="talla3">Talla 3</string>
    <string name="talla4">Talla 4</string>
    <string name="talla5">Talla 5</string>
    <string name="talla6">Talla 6</string>
    <string name="talla7">Talla 7</string>
    <string name="talla8">Talla 8</string>
    <string name="talla">Talla</string>
    <string name="tallass">Tallas</string>
    <string name="costoProd">Costo del producto $</string>
    <string name="precioProd">Precio al público $</string>
    <string name="descuento">Descuento %</string>
    <string name="stock">Stock</string>
    <string name="status">Estatus</string>
    <string name="generaCodigos">Generar códigos</string>
    <string name="modificaCodigos">Modificar códigos</string>
    <string name="modifCod">Modificar código de producto</string>
    <string name="buscCod">Buscar código de producto</string>
    <string name="elimCod">Eliminar código de producto</string>
    <string name="buscaCod">Buscar código de producto</string>
    <string name="consCod">Consultar códigos de productos</string>
    <string name="idBuscCod">Ingrese el código a buscar</string>
    <string name="idconsCod">Ingrese el código a filtrar</string>
    <string name="idmodifCod">Ingrese el código a modificar</string>
    <string name="eliminCod">Ingrese el código a eliminar</string>
    <string name="reempMod">Reemplazar modelo por</string>
    <string name="reemplTall">Reemplazar talla por</string>
    <string name="prod">Producto:</string>
    <string name="mod">Modelo:</string>
    <string name="tal">Talla:</string>
    <string name="costo">Costo:</string>
    <string name="precio">Precio:</string>
    <string name="desc">Descuento:</string>
    <string name="stoc">Stock:</string>
    <string name="statu">Estatus:</string>
    <string name="rating">Raiting:</string>
    <string name="creaKit">Crear KIT</string>
    <string name="pkit">¿Qué productos conforman el kit?</string>
    <string name="nomkit">Nombre del kit</string>
    <string name="confirmar">Confirmar</string>
    <string name="atras">Atras</string>
    <string name="modelo">Escoge el modelo</string>
    <string name="pEstim">Precio estimado $$$</string>
    <string name="cancelar">Cancelar</string>
    <string name="idKit">Ingresa el id del kit</string>
    <string name="modKit">Modificar KIT</string>
    <string name="elimKit">Eliminar KIT</string>
    <string name="consKit">Consultar KIT</string>
    <string name="addTalla">Agregar talla</string>
    <string name="title_activity_admin_navegation">AdminNavegation</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_navegacion_admin">NavegacionAdmin</string>
    <string name="bienvenida">Bienvenido</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_inicio_cliente">Inicio</string>
    <string name="title_tienda_cliente">Tienda</string>
    <string name="title_carrito_cliente">Carrito</string>
    <string name="title_cuenta_cliente">Cuenta</string>
    <string name="title_kits_cliente">KITS</string>
    <string name="txtDescImg">Descripcion de la imagen</string>
    <string name="txtDerechos">Copyright&#169; Todos los derechos reservados | Perro Estilo &amp;2021</string>
    <string name="txtCategorias">Categorías</string>
    <string name="txtProductos">Productos</string>
    <string name="txtNombreProducto">Nombre del producto</string>
    <string name="txtPrecio">$$$  </string>
    <string name="txtNuestraGaleri">Nuestra galeria</string>
    <string name="txtMejoresComentarios">Los mejores comentarios</string>
    <string name="txtUser">User</string>
    <string name="txtLorem">LoremIm asdjgdfjhskfhkshdf lahfkjsdhfldsjfkdfdslfhkjsgh
    dskjfhdskjfhksghkshgs</string>
    <string name="txtLicencias">Licencias</string>
    <string name="txtParaTi">Para ti    </string>
    <string name="txtOfertas">Ofertas</string>
    <string name="txtModa">Moda</string>
    <string name="txtKITS">KITS</string>
    <string name="txtProductosNuevos">Productos nuevos</string>
    <string name="txtTodasCategorias">Todas las categorias</string>
    <string name="txtDescuento">Descuento %</string>
    <string name="txtVerMas">Ver más...</string>
    <string name="txtNuevo">Nuevo</string>
    <string name="txtTemporada">Temporada</string>
    <string name="txtCategoriaPadre">Cateogoria Padre</string>
    <string name="txtVerTodasCategorias">Ver todas las categorias...</string>
    <string name="txtVerTodosKits">Ver todos los kits... </string>
    <string name="txtCategoria1">Categoria 1</string>
    <string name="txtRaiting">Raiting </string>
    <string name="txtEscogerTalla">Talla:</string>
    <string name="txtCantidad">Cantidad:</string>
    <string name="txtUno">1</string>
    <string name="txtNombreDelProducto">Nombre del prodcuto</string>
    <string name="txtComprarAhora">Comprar ahora</string>
    <string name="txtAgregarCarrito">Añadir al carrito</string>
    <string name="txtDetallesProducto">Detalles del producto</string>
    <string name="txtMedidas">Medidas</string>
    <string name="txtModelo">Modelo</string>
    <string name="txtMarca">Marca</string>
    <string name="txtDescripcion">Descripcion</string>
    <string name="txtPreguntar">Preguntar</string>
    <string name="txtProductosRelacionados">Productos relacionados</string>
    <string name="txtTotal">Total:</string>
    <string name="txtTotalAPagar">Total a pagar:</string>
    <string name="txtSubtotal">Subtotal</string>
    <string name="txtVerDetalle">Ver detalle</string>
    <string name="txtEditar">Editar</string>
    <string name="txtQuitar">Quitar</string>
    <string name="txtContinuarComprando">Continuar comprando</string>
    <string name="txtConfirmarCompra">Confirmar compra</string>
    <string name="txtCancelar">Cancelar</string>
    <string name="txtMiCarrito">Mi carrito</string>
    <string name="txtVerCarrito">Ver carrito</string>
    <string name="txtContacto">Contacto</string>
    <string name="txtDireccionEntrega">DireccionEntrega </string>
    <string name="txtNombreContacto">Nombre(s) </string>
    <string name="txtAppPContacto">Apellido paterno </string>
    <string name="txtAppMContacto">Apellido materno </string>
    <string name="txtTelContacto">Telefono</string>
    <string name="txtEditarContacto">Editar contacto</string>
    <string name="txtAgregarDireccion">Agregar direccion</string>
    <string name="txtAgregarOtraDireccion">Agregar otra direccion</string>
    <string name="txtEstado">Estado</string>
    <string name="txtMunicipio">Municipio</string>
    <string name="txtLocalidad">Localidad</string>
    <string name="txtCodigoPostal">Codigo postal</string>
    <string name="txtCalleExterior">Calle y número exterior</string>
    <string name="txtCalleInterior">Calle y número interior</string>
    <string name="txtReferencias">Referencias</string>
    <string name="txtLongitud">Longitud</string>
    <string name="txtLatitud">Latitud</string>
    <string name="txtAgregar">Agregar</string>
    <string name="txtInstrucciones">Instrucciones</string>
    <string name="txtEnviarPedidoWhats">Enviar pedido por WhatsApp</string>
    <string name="txtTicketCompra">Ver ticket compra</string>
    <string name="txtGraciasPorSuCompra">Gracias por su compra</string>
    <string name="txtOrden">Orden</string>
    <string name="txtNumeral">#####</string>
    <string name="txtNoSerie">No. Serie</string>
    <string name="txtClave">AAAA-4321234</string>
    <string name="txtDetalleCompra">Detalle de compra</string>
</resources>