<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_inicio"
            android:icon="@drawable/home"
            android:title="@string/menu_inicio" />
        <item
            android:id="@+id/nav_categorias"
            android:icon="@drawable/categorias"
            android:title="@string/menu_categorias" />
        <item
            android:id="@+id/nav_etiquetas"
            android:icon="@drawable/etiquetas"
            android:title="@string/menu_etiquetas" />
        <item
            android:id="@+id/nav_modelos"
            android:icon="@android:drawable/ic_dialog_dialer"
            android:title="@string/menu_modelos" />
        <item
            android:id="@+id/nav_tallas"
            android:icon="@drawable/tallas"
            android:title="@string/menu_tallas" />
        <item
            android:id="@+id/nav_productos"
            android:icon="@drawable/productos"
            android:title="@string/menu_productos" />
        <item
            android:id="@+id/nav_kits"
            android:icon="@drawable/kit"
            android:title="@string/menu_kit" />
        <item
            android:id="@+id/nav_pedidos"
            android:icon="@drawable/pedidos"
            android:title="@string/menu_pedidos" />
        <item
            android:id="@+id/nav_envios"
            android:icon="@drawable/envios"
            android:title="@string/menu_envios" />
        <item
            android:id="@+id/nav_inventario"
            android:icon="@drawable/stock"
            android:title="@string/menu_inventario" />
        <item
            android:id="@+id/nav_ventas"
            android:icon="@drawable/ventas"
            android:title="@string/menu_ventas" />
        <item
            android:id="@+id/nav_clientes"
            android:icon="@drawable/clientes"
            android:title="@string/menu_clientes" />
        <item
            android:id="@+id/nav_cuenta"
            android:icon="@drawable/rousse"
            android:title="@string/menu_cuenta" />
    </group>
</menu>