<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_inicio_cliente"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_inicio_cliente" />
    <item
        android:id="@+id/navigation_tienda_cliente"
        android:icon="@drawable/ic_baseline_storefront_24"
        android:title="@string/title_tienda_cliente" />

    <item
        android:id="@+id/navigation_carrito_cliente"
        android:icon="@drawable/ic_baseline_shopping_cart_24"
        android:title="@string/title_carrito_cliente"

        />

    <item
        android:id="@+id/navigation_kits_cliente"
        android:icon="@drawable/ic_baseline_developer_board_24"
        android:title="@string/title_kits_cliente" />
    <item
        android:id="@+id/navigation_cuenta_cliente"
        android:icon="@drawable/ic_baseline_account_circle_24"
        android:title="@string/title_cuenta_cliente" />
</menu>